Verify user information once in a while

--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -29,3 +29,4 @@ import:
 - package: gopkg.in/leonelquinteros/gotext.v1
 - package: gopkg.in/mailgun/mailgun-go.v1
 - package: github.com/lestrrat/go-bindata
+- package: github.com/dghubble/go-twitter
