--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -30,3 +30,4 @@ import:
 - package: gopkg.in/mailgun/mailgun-go.v1
 - package: github.com/lestrrat/go-bindata
 - package: github.com/dghubble/go-twitter
+- package: github.com/lestrrat/go-sqllib
