--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -30,4 +30,8 @@ import:
 - package: gopkg.in/mailgun/mailgun-go.v1
 - package: github.com/lestrrat/go-bindata
 - package: github.com/dghubble/go-twitter
+  subpackages:
+  - twitter
 - package: github.com/lestrrat/go-sqllib
+- package: github.com/dghubble/oauth1
+  version: v0.4.0
