trust that twitter will make our URL 23 chars

--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -37,3 +37,5 @@ import:
 - package: github.com/lestrrat/go-sqllib
 - package: github.com/dghubble/oauth1
   version: v0.4.0
+- package: github.com/cenkalti/backoff
+  version: v1.0.0
