build docker image

--- a/octav/cloudbuild.yaml
+++ b/octav/cloudbuild.yaml
@@ -7,4 +7,6 @@ steps:
   dir: 'octav'
   env: ['PROJECT_ROOT=github.com/builderscon/octav/octav']
   args: ['build', '-tags', 'debug0', '-o', 'apiserver', 'cmd/octav/octav.go']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=asia.gcr.io/$PROJECT_ID/cloudbuild_test', '.']
 images: ['asia.gcr.io/$PROJECT_ID/cloudbuild_test']
